--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="imagens/doces/nakedcake.jpg" class="d-block w-100" alt="...">
+                <img src="imagens/doces/bolo.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Naked Cake</h5>
                   <p>O delicioso Naked Cake recheado com  creme de leite ninho e morangos</p>
