--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
+              <ul class="navbar-nav" style="margin-left: 30%;">
                 <li class="nav-item">
                   <a class="nav-link" href="index.html">Início</a>
                 </li>
@@ -69,7 +69,7 @@
   
       <div class="album py-5">
         <div class="container">
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-2">
             <div class="col">
               <div class="card shadow-sm">
                 
